# CoLeM

./: .flake8  .gitignore  README.md  config.json  config.py  config.yaml  pyproject.toml  requirements.txt  run.slurm  train.py
checkpoints/: README.md
data/: README.md
data/eval/: README.md
data/train/: README.md
dataset/: augmenter.py  config.json  dataloader.py  dataset.py  table_dataloader.py  table_dataset.py
logs/: logger.py
model/: loss.py  model.py
notebooks/: loss_research.ipynb
trainer/: trainer.py
utils/: functions.py
