[tool.poetry]
name = "colem"
version = "0.1.0"
description = "CoLeM framework is a table model based on contrastive learning techniques for solving the problem of Column Type Annotation."
authors = ["Kirill Tobola <kirilltobola@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
